syntax = "proto3";
	package bchain;
    option go_package = "bchain/";

    message ProtoTransaction {
        message VinType {
            string Coinbase = 1;
            bytes Txid = 2;
            uint32 Vout = 3;
            bytes ScriptSigHex = 4;
            uint32 Sequence = 5;
            repeated string Addresses = 6;
        }
        message VoutType {
            bytes ValueSat = 1;
            uint32 N = 2;
            bytes ScriptPubKeyHex = 3;
            repeated string Addresses = 4;
        }
        bytes Txid = 1;
        bytes Hex = 2;
        uint64 Blocktime = 3;
        uint32 Locktime = 4;
        uint32 Height = 5;
        repeated VinType Vin = 6;
        repeated VoutType Vout = 7;
        int32 Version = 8;
        int64 VSize = 9;
    }